upload fully executed

--- a/Capstone Project.ipynb
+++ b/Capstone Project.ipynb
@@ -6446,11 +6446,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----------+--------+---------+--------------------+--------------+------------+-------+-----------------+----------+\n",
+      "|ident|local_code|gps_code|iata_code|        airport_name|          type|elevation_ft|country|             city|state_code|\n",
+      "+-----+----------+--------+---------+--------------------+--------------+------------+-------+-----------------+----------+\n",
+      "| KAFN|       AFN|    KAFN|      AFN|Jaffrey Airport S...| small_airport|      1040.0|     US|          JAFFREY|        NH|\n",
+      "| KGAG|       GAG|    KGAG|      GAG|        Gage Airport| small_airport|      2223.0|     US|             GAGE|        OK|\n",
+      "| KGAI|       GAI|    KGAI|      GAI|Montgomery County...| small_airport|       539.0|     US|     GAITHERSBURG|        MD|\n",
+      "| KMOD|       MOD|    KMOD|      MOD|Modesto City Co-H...|medium_airport|        97.0|     US|          MODESTO|        CA|\n",
+      "| KOZR|       OZR|    KOZR|      OZR|Cairns AAF (Fort ...|medium_airport|       301.0|     US|FORT RUCKER/OZARK|        AL|\n",
+      "+-----+----------+--------+---------+--------------------+--------------+------------+-------+-----------------+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "airport_table = spark.sql(\"\"\"\n",
     "SELECT\n",
